before playing with paypal

--- a/app/views/admin/categories/show.html.erb
+++ b/app/views/admin/categories/show.html.erb
@@ -5,7 +5,7 @@
 </header>
 <article>
 
-  <% if @category.depth < 1 %>
+  <% if @category.depth <= 1 %>
 
     <div class="hgroup">
       <h3 class="left">
