--- a/app/views/statics/index.html.erb
+++ b/app/views/statics/index.html.erb
@@ -34,8 +34,9 @@
   <%# render 'layouts/index_header' %>
   
   <%# render 'layouts/front_shared_footer' %>
-  <%= link_to 'admin', new_admin_session_path %>
-  
+  <%= link_to 'admin', new_admin_session_path %>||
+  <%= link_to 'Categories', categories_path %>||
+  <%= link_to 'Cart', cart_index_path %>||
 </body>
 
 </html>
