--- a/app/views/lookbooks/_layout_3.html.erb
+++ b/app/views/lookbooks/_layout_3.html.erb
@@ -2,19 +2,21 @@
   
   <div class="col-md-6">
     <div class="col-md-12 layout" style="padding:0">
-      <%= link_to lookbook_path(@lookbook) do %>
-        <% if @tiles.first.galleries.select{ |v| v['type'] == 'TileCoverGallery' }.first %>
-          <%= image_tag(@tiles.first.galleries.select{ |v| v['type'] == 'TileCoverGallery' }.first.attachment.url, class: 'img-responsive')  %>
+      <% if @tiles.first.topic %>
+        <%= link_to lookbook_topic_path(@lookbook, @tiles.first.topic) do %>
+          <% if @tiles.first.galleries.select{ |v| v['type'] == 'TileCoverGallery' }.first %>
+            <%= image_tag(@tiles.first.galleries.select{ |v| v['type'] == 'TileCoverGallery' }.first.attachment.url, class: 'img-responsive')  %>
+          <% end %>
         <% end %>
-      <% end %>
-      <%= link_to lookbook_path(@lookbook), class: 'link', style:'padding:0' do %>
-        <ul>
-          <li><%= @tiles.first.context_1 %></li>
-          <li><%= @tiles.first.context_2 %></li>
-          <li><%= @tiles.first.context_3 %></li>
-          <li><%= @tiles.first.context_4 %></li>
-          <li><%= @tiles.first.context_5 %></li>
-        </ul>
+        <%= link_to lookbook_topic_path(@lookbook, @tiles.first), class: 'link', style:'padding:0' do %>
+          <ul>
+            <li><%= @tiles.first.context_1 %></li>
+            <li><%= @tiles.first.context_2 %></li>
+            <li><%= @tiles.first.context_3 %></li>
+            <li><%= @tiles.first.context_4 %></li>
+            <li><%= @tiles.first.context_5 %></li>
+          </ul>
+        <% end %>
       <% end %>
     </div>
   </div>
@@ -22,22 +24,24 @@
   <div class="col-md-6">
     <% @tiles.each_with_index do |tile, index| %>
       <% if index >= 1 %>
-        <div class="col-md-12 layout" style="padding:0">
-          <%= link_to lookbook_path(@lookbook) do %>
-            <% if tile.galleries.select{ |v| v['type'] == 'TileCoverGallery' }.first %>
-              <%= image_tag(tile.galleries.select{ |v| v['type'] == 'TileCoverGallery' }.first.attachment.url, class: 'img-responsive')  %>
+        <% if tile.topic %>
+          <div class="col-md-12 layout" style="padding:0">
+            <%= link_to lookbook_topic_path(@lookbook, tile.topic) do %>
+              <% if tile.galleries.select{ |v| v['type'] == 'TileCoverGallery' }.first %>
+                <%= image_tag(tile.galleries.select{ |v| v['type'] == 'TileCoverGallery' }.first.attachment.url, class: 'img-responsive')  %>
+              <% end %>
             <% end %>
-          <% end %>
-          <%= link_to lookbook_path(@lookbook), class: 'link', style: 'padding:0' do %>
-            <ul>
-              <li><%= tile.context_1 %></li>
-              <li><%= tile.context_2 %></li>
-              <li><%= tile.context_3 %></li>
-              <li><%= tile.context_4 %></li>
-              <li><%= tile.context_5 %></li>
-            </ul>
-          <% end %>
-        </div>
+            <%= link_to lookbook_topic_path(@lookbook, tile.topic), class: 'link', style:'padding:0' do %>
+              <ul>
+                <li><%= tile.context_1 %></li>
+                <li><%= tile.context_2 %></li>
+                <li><%= tile.context_3 %></li>
+                <li><%= tile.context_4 %></li>
+                <li><%= tile.context_5 %></li>
+              </ul>
+            <% end %>
+          </div>
+        <% end %>
       <% end %>
     <% end %>
   </div>
