--- a/app/views/categories/show.html.erb
+++ b/app/views/categories/show.html.erb
@@ -1,5 +1,6 @@
 <link rel="stylesheet" href="/css/pageProdLookbook.css">
 <link rel="stylesheet" href="/css/prodList.css">
+<script src="/js/side.js"></script> 
 
 <% content_for :breadcrumb do %>
   <%= link_to 'Home', root_path, title: '首頁' %> &nbsp; > &nbsp; <%= link_to 'SHOP', 'javascript:void(0);'%>
@@ -7,7 +8,10 @@
 
 <% if @category.parent_id != 0 && @parent_cate.galleries.first  %>
   <% content_for :header do %>
-    <div id="prodTop"><!-- Start #prodTop 上方橫福 --> 
+    
+  <% end %>
+<% end %>
+<div id="prodTop"><!-- Start #prodTop 上方橫福 --> 
       <div class="container">
         <div class="col-md-12">
           <div class="row">
@@ -17,9 +21,6 @@
         </div>
       </div>
     </div><!-- End #prodTop --> 
-  <% end %>
-<% end %>
-
 
 <div class="xlg-margin hidden-xs"></div><!-- Space 間隔 -->
 <div class="container"><!-- Start .container -->
