--- a/app/views/statics/size.html.erb
+++ b/app/views/statics/size.html.erb
@@ -1,7 +1,7 @@
 <% content_for :breadcrumb do %>
   <%= link_to 'Home', root_path, title: '首頁' %> &nbsp; > &nbsp; <%= link_to 'SIZE', 'javascript:void(0);' %>
 <% end %>
-
+  <link rel="stylesheet" href="/css/pageSize.css">
   <div class="xlg-margin"></div><!-- Space 間隔 -->
 
     <div class="container">
