--- a/app/views/topic_collections/show.html.erb
+++ b/app/views/topic_collections/show.html.erb
@@ -1,5 +1,6 @@
 <link rel="stylesheet" href="/css/pageProdPickup.css">
 <link rel="stylesheet" href="/css/prodList.css">
+<script src="/js/side.js"></script> 
 
 <% content_for :breadcrumb do %>
   <%= link_to 'Home', root_path, title: '首頁' %> &nbsp; > &nbsp; <%= link_to 'Collection', 'javascript:void(0);' %>
@@ -8,7 +9,10 @@
 
 <% if @topic.galleries.select{ |v| v['type'] == 'TopicBannerGallery' }.first  %>
   <% content_for :header do %>
-    <div id="prodTop"><!-- Start #prodTop 上方橫福 --> 
+    
+  <% end %>
+<% end %>
+<div id="prodTop"><!-- Start #prodTop 上方橫福 --> 
       <div class="container">
         <div class="col-md-12">
           <div class="row">
@@ -18,9 +22,6 @@
         </div>
       </div>
     </div><!-- End #prodTop --> 
-  <% end %>
-<% end %>
-
 
 <div class="xlg-margin hidden-xs"></div><!-- Space 間隔 -->
 <div class="container"><!-- Start .container -->
