--- a/public/css/layout.css
+++ b/public/css/layout.css
@@ -48,7 +48,7 @@ body, html { overflow-x: hidden; color: #434343; }
 .dropdown-cart-menu-container .btn-group { background-color: transparent; }
 #header .dropdown-cart-menu-container:hover .btn.dropdown-toggle, #header .dropdown-cart-menu-container .open .btn.dropdown-toggle { background-color: transparent; color: #fff; }
 .dropdown-cart { position: absolute; left: -17px; top: 0; }
-.dropdown-cart-menu-container .cart-menu-icon { width: 35px; height: 35px; position: absolute; left: 3px; top: 0; background-image: url(../images/icon_top.png); background-position: -35px -35px; border: none; }
+.dropdown-cart-menu-container .cart-menu-icon { width: 35px; height: 35px; position: absolute; left: 0px; top: 0; background-image: url(../images/icon_top.png); background-position: -35px -35px; border: none; }
 #header .dropdown-cart-menu-container:hover .cart-menu-icon, #header .dropdown-cart-menu-container .open .cart-menu-icon { background-position: -70px -35px; }
 #header .dropdown-cart .dropdown-cart-menu { position: absolute;top: 36px; }
 .header-top-right { float: left; }
@@ -94,6 +94,7 @@ h1.logo { margin-top: 10px; margin-bottom: 15px; }
 @media (min-width: 768px) and (max-width: 909px) {
 #main-nav-container #main-nav .menu li a { padding: 13px 9px; }
 #main-nav-container.fixed #main-nav .menu li a { padding: 13px 20px; }
+.logo-container {float: left;width: 100px;}
 }
 @media (max-width: 767px) {
 #main-nav-container .container { width: 100%; max-width: 1170px; }
@@ -176,11 +177,12 @@ h2.title { background: none; }
 .input-icon.input-icon-birthday { background-position: 0px -120px; }
 .input-icon.input-icon-address { background-position: 0px -150px; }
 .custom-checkbox .checbox-container { top: 6px; }
+.btn{ padding: 5px 25px;-webkit-font-smoothing: antialiased!important; font-weight:normal!important;font-size: 1em!important; box-shadow: none; -webkit-box-shadow!important: none;display: inline-block; }
 .mainBtn { color: #fff !important; background-color: #C9006E; border-color: #C9006E; -webkit-box-shadow: none; box-shadow: none; border-radius: 0px; }
 .mainBtn span { font-size: 1.3em; }
 .mainBtn:hover, .mainBtn:focus, .mainBtn:active, .mainBtn.active, .open .dropdown-toggle.mainBtn { color: #fff !important; background-color: #d8569d; border-color: #C9006E; -webkit-box-shadow: none; box-shadow: none; }
-#content .btn-custom-2, #content .btn-custom-3 { padding: 5px 25px; font-size: 1em; box-shadow: none; -webkit-box-shadow: none; }
-#content .btn-custom-2, #content .btn-custom-2:hover, #content .btn-custom-3, #content .btn-custom-3:hover { border-color: transparent; }
+#content .btn-custom-2, #content .btn-custom-3 { padding: 5px 25px;-webkit-font-smoothing: antialiased!important; font-weight:normal!important;font-size: 1em!important; box-shadow: none; -webkit-box-shadow!important: none;display: inline-block; }
+#content .btn-custom-2, #content .btn-custom-2:hover, #content .btn-custom-3, #content .btn-custom-3:hover { border-color: transparent;text-decoration: none; }
 #content .btn-custom-2:hover { background-color: #C9006E; }
 #content .btn-custom-3:hover { -webkit-box-shadow: inset 1px 1px 6px 2px rgba(0, 0,0, 0.2); box-shadow: inset 1px 1px 6px 2px rgba(0, 0, 0, 0.2); background-color: #C9006E; }
 #content .btn-custom-3:focus, #content .btn-custom-3:active, #content .btn-custom-3.active { -webkit-box-shadow: inset 0 1px 1px rgba(255, 255, 255, 0.4)!important; box-shadow: inset 0 1px 1px rgba(255, 255, 255, 0.4)!important; }
@@ -202,13 +204,14 @@ textarea.form-control { resize: none; }
 }
 /*-------------------------------------------------------------------------------------------Footer---*/
 #scroll-top { line-height: 1em!important; padding: 0; padding-top: 3px; color: #FFF!important; text-decoration: none!important; height: 37px; width: 40px; font-size: 1em!important; bottom: 70px; border-radius: 1px;z-index:1000;display:block;background-color: #C9006E; }
+
 #footer a:hover { color: #FFF!important; }
 #footer-bottom { background: #000!important; padding-bottom: 0; }
 #footer-bottom .container { background-image: url(../images/bg_footer.jpg); position: relative; background-position: center bottom; background-repeat: no-repeat; hieght: 100px!important; padding-bottom: 25px; margin-bottom: 0; }
 .footer-text-container p:after { content: "　© 2014 Copyright by LadyBoo."; }
 .footer-text-container { color: #b3b3b3; position: relative; }
-.footer-text-container a { font-size: 0.9em!important; margin: 0 0 0 4% }
-.footer-social-links-container a { color: #fff!important; display: block; width: 200px; position: relative; padding-left: 40px; background-image: url(../images/fb.gif); background-repeat: no-repeat; background-position: left top; position: absolute; top: -15px; left: 40px; margin: 0 8% 0 0; font-size: 0.9em!important; height: 50px; padding-top: 35px; }
+.footer-text-container a { font-size: 1em!important; margin: 0 0 0 4% }
+.footer-social-links-container a { color: #fff!important; display: block; width: 200px; position: relative; padding-left: 40px; background-image: url(../images/fb.gif); background-repeat: no-repeat; background-position: left top; position: absolute; top: -15px; left: 40px; margin: 0 8% 0 0; font-size: 1em!important; height: 50px; padding-top: 35px; }
 #footer a { color: #b3b3b3; }
 .fb-like { position: absolute; left: 240px; top: 16px; }
 @media (min-width: 768px) and (max-width: 1200px) {
