--- a/public/css/pageSize.css
+++ b/public/css/pageSize.css
@@ -1,20 +1,20 @@
 .title.size { width: 230px; }
-.col-xs-6 { width: 380px; height: 370px; margin: 0; padding: 0; }
+#content .col-xs-6,#content .col-md-6 ,#content .col-sm-6  { width: 380px; height: 370px; margin: 0; padding: 0; }
 #content img { max-width: 400px; }
 @media (min-width: 768px) and (max-width: 1199px) {
-.col-xs-6 { width: 400px; height: 340px; padding: 0; margin: 0; }
-.col-md-6 { width: 50%; }
+#content .col-xs-6 { width: 400px; height: 340px; padding: 0; margin: 0; }
+#content .col-md-6 { width: 50%; }
 }
 @media (min-width: 768px) and (max-width: 991px) {
 .title.size { width: 20%; min-width: 210px; }
 }
 @media (max-width: 767px) {
-.col-xs-6 img { margin: 0 auto; }
+#content .col-xs-6 img { margin: 0 auto; }
 #content .container { padding: 0 10px; margin: 0; }
 .img-responsive { width: 100%; }
-.col-xs-6 { width: 400px; height: auto; margin: 0; padding-bottom: 20px; }
-.col-xs-6 { float: none; margin: 0 auto; width: 90%; }
+#content .col-xs-6 { width: 400px; height: auto; margin: 0; padding-bottom: 20px; }
+#content .col-xs-6 { float: none; margin: 0 auto; width: 90%; }
 }
 @media (min-width: 400px) and (max-width: 767px) {
-.col-xs-6 { width: 400px!important; }
+#content .col-xs-6 { width: 400px!important; }
 }
