fix some footer

--- a/app/views/cart/_show_order_form.html.erb
+++ b/app/views/cart/_show_order_form.html.erb
@@ -117,8 +117,8 @@
         </div>
         
         <div class="col-md-6 col-sm-6 col-xs-6">
-          <h2>發票資訊</h2><a id="receiptLink" href="#" title="電子發票說明 Receipt info e-receipt">電子發票說明  Receipt info e-receipt</a>
-          <p>核准文號：北區國稅北縣三字第 000000000000 號<br>※ 依統一發票使用辦法規定：個人戶（二聯式）發票一經開立，不得任意更改為公司戶（三聯式）發票。</p>
+          <h2>發票資訊</h2>
+          ※ 依統一發票使用辦法規定：個人戶（二聯式）發票一經開立，不得任意更改為公司戶（三聯式）發票。</p>
           <label>發票
           <%= select_tag "order[invoice_type]", generate_invoice_options, data: {} , class: 'form-control' %>
           </label>
