--- a/app/views/admin/measurements/index.html.erb
+++ b/app/views/admin/measurements/index.html.erb
@@ -5,6 +5,8 @@
     <%= link_to "Basic", edit_admin_category_product_path(@product.category, @product)%>
     <%= link_to "Measurement", admin_category_product_measurements_path(@product.category, @product) %>
     <%= link_to "ProductPhotoGallery", admin_category_product_photo_path(@product.category, @product)%>
+    <%= link_to "Stock", admin_category_product_stocks_path(@product.category, @product)%>
+    <%= link_to "peditor", admin_category_product_free_paragraph_path(@product.category, @product) %>
   </nav>
 </header>
 <br>
