--- a/app/views/admin/orders/show.js.erb
+++ b/app/views/admin/orders/show.js.erb
@@ -1,4 +1,5 @@
 var $active_tr = $("#order_<%= @order.id %>");
-var $order_detail = $('<%= (render partial: "show_order_detail", :locals => { order: @order }).gsub!(/\>\s+\</,'><').gsub!(/\s{2,}/,'').html_safe %>');
+
+var $order_detail = $('<%= (render partial: "show_order_detail", :locals => { order: @order }).gsub(/\>\s+\</,'><').gsub(/\s{2,}/,'').html_safe %>');
 
 $order_detail.insertAfter($active_tr).stop().show();
